# stock-backtest-system

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: INSTRUCTION.md
.claude/agents/: full-stack-egineer.md  (+1 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 70cbd6c7e984_initial_schema.py  dd43cf1b6e93_initial_schema.py  fbac704de733_add_user_authentication.py
backend/app/: main.py
backend/app/api/: auth_routes.py  backtest_routes.py  data_routes.py  indicator_routes.py  strategy_routes.py
backend/app/core/: auth.py  config.py  database.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  models.py  schemas.py
backend/app/services/: backtest_service.py  backtest_service_async.py  code_validator.py  data_manager.py  data_manager_async.py  engine.py  indicator_loader.py  indicators.py  performance.py  report_generator.py  strategy.py  strategy_loader.py  workspace.py
backend/strategies/: rsi_mean_reversion.py  sma_crossover.py
backend/tests/: conftest.py  test_api.py  test_code_validator.py  test_data_manager.py  test_engine.py  test_indicator_api.py  test_indicator_loader.py  test_indicator_workspace.py  test_indicators.py  test_performance.py  test_strategy.py  test_strategy_routes.py  test_workspace.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
vici-trade-sdk/: README.md  pyproject.toml
vici-trade-sdk/vici_trade_sdk/: __init__.py  indicator.py  portfolio.py  strategy.py
(+16 files in other folders)
