[tool.poetry]
name = "stock-backtest-system"
version = "0.1.0"
description = "US Stock Backtesting System"
authors = ["SharpKoi"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.128.0"
uvicorn = {version = "0.40.0", extras = ["standard"]}
yfinance = "1.1.0"
pandas = "3.0.0"
numpy = "2.4.2"
aiosqlite = "0.22.1"
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
plotly = "6.5.2"
python-multipart = "0.0.22"
vici-trade-sdk = {path = "../vici-trade-sdk"}
psycopg2-binary = "2.9.11"
redis = "7.1.0"
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
alembic = ">=1.13"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
httpx = "0.28.1"
ruff = "^0.14.14"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

